--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,10 +1,10 @@
 <app-header></app-header>
 <div style="display: flex; height: 100%; width: 100%; justify-content: center; align-items: center;">
   <div style="width: 1348px; display: flex;">
-    <span style="width: 50%; justify-content: center; align-items: center; display: flex; margin-bottom: 100px;">
+    <span style="width: 50%; justify-content: center; align-items: center; display: flex;">
       <div style="max-width: 650px;">
-        <div style=" width: 100%; margin: 25px 0; color: #999;" class="mat-h3">OPEN AND FREEDOM</div>
-        <div class="mat-h1"><strong class="primarycolor">softlibrary</strong> making software free & open</div>
+        <div style=" width: 100%; margin: 25px 0; color: #999;" class="mat-h1">OPEN AND FREEDOM</div>
+        <div style="font-size: 38px; line-height: 42px; margin: 25px 0;"><strong class="primarycolor">softlibrary</strong> making software free & open</div>
         <div class="mat-h4" style="color: #666;">softlibary is a passionate team on making free and open source software
           that is useful for the community. We believe that work that is awesome must be free and open to access by the community. Develop by the community and use by the community. This will make sure that our work stay available for free and open source.</div>
         <div><button mat-raised-button color="primary" style="margin: 20px 0;">Projects</button><button mat-button
@@ -16,3 +16,4 @@
     </span>
   </div>
 </div>
+<app-footer></app-footer>
