--- a/src/styles.scss
+++ b/src/styles.scss
@@ -37,3 +37,11 @@ $softlibrary-theme: mat-light-theme((
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+a{
+  color: mat-color($softlibrary-primary);
+  text-decoration: none;
+}
+a:hover{
+  text-decoration: underline;
+}
