--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,10 +3,13 @@
   <div style="width: 1348px; display: flex;">
     <span style="width: 50%; justify-content: center; align-items: center; display: flex;">
       <div style="max-width: 650px;">
-        <div style=" width: 100%; margin: 25px 0; color: #999;" class="mat-h1">OPEN AND FREEDOM</div>
-        <div style="font-size: 38px; line-height: 42px; margin: 25px 0;"><strong class="primary-color">softlibrary</strong> making software free & open</div>
-        <div class="mat-h4" style="color: #666;">softlibary is a passionate team on making free and open source software
-          that is useful for the community. We believe that work that is awesome must be free and open to access by the community. Develop by the community and use by the community. This will make sure that our work stay available for free and open source.</div>
+        <div style=" width: 100%; margin: 25px 0; color: #666;" class="mat-h1">OPEN AND FREEDOM</div>
+        <div style="font-size: 38px; line-height: 42px; margin: 25px 0;"><strong
+            class="primary-color">softlibrary</strong> making software free & open</div>
+        <div class="mat-h4" style="color: #888; line-height: 30px;">softlibary is a passionate team on making free and open source software
+          that is useful for the community. We believe that work that is awesome must be free and open to access by the
+          community. Develop by the community and use by the community. This will make sure that our work stay available
+          for free and open source.</div>
         <div><button mat-raised-button color="primary" style="margin: 20px 0;">Projects</button><button mat-button
             color="primary">Learn more</button></div>
       </div>
@@ -14,6 +17,65 @@
     <span style="width: 50%; display: flex; justify-content: flex-end; align-items: center; margin-bottom: 100px;">
       <span><img src="/assets/img/building-blocks.gif" width="110%" /></span>
     </span>
+  </div>
+</div>
+<div style="border-top: 1px solid #efefef; height: 100%; display: flex; justify-content: center; align-items: center;">
+  <div style="width: 1348px; max-width: 1348px;">
+    <div style="display: flex;">
+      <span class="mat-display-1">Our projects</span>
+      <span style="flex: 1 1 auto;"></span>
+      <span><button mat-raised-button color="primary">View more projects</button></span>
+    </div>
+    <div style="display: flex;">
+      <mat-card class="home-project-card" style="margin-left: 0;">
+        <mat-card-header>
+          <mat-card-title><span class="warn-color">WP Launcher</span></mat-card-title>
+          <mat-card-subtitle>Wordpress theme</mat-card-subtitle>
+        </mat-card-header>
+        <mat-card-content>
+          A simple Wordpress theme with easy to use and customizable with feature rich customize function.
+        </mat-card-content>
+        <mat-card-actions>
+          <button mat-flat-button color="warn">Explore project</button>
+        </mat-card-actions>
+      </mat-card>
+      <mat-card class="home-project-card">
+        <mat-card-header>
+          <mat-card-title><span style="color: #4caf50;">WC Subscription</span></mat-card-title>
+          <mat-card-subtitle>WooCommerce plugin</mat-card-subtitle>
+        </mat-card-header>
+        <mat-card-content>
+          Enable the ability to sell a product as a service to get the benific of recurring or subscription payment.
+        </mat-card-content>
+        <mat-card-actions>
+          <button mat-button disabled>comming soon...</button>
+        </mat-card-actions>
+      </mat-card>
+      <mat-card class="home-project-card">
+        <mat-card-header>
+          <mat-card-title><span style="color: #9c27b0;">WC Dynamic Pricing</span></mat-card-title>
+          <mat-card-subtitle>WooCommerce plugin</mat-card-subtitle>
+        </mat-card-header>
+        <mat-card-content>
+          A feature rich custom pricing to a product with a rule base pricing and duration base pricing. 
+        </mat-card-content>
+        <mat-card-actions>
+          <button mat-button disabled>comming soon...</button>
+        </mat-card-actions>
+      </mat-card>
+      <mat-card class="home-project-card">
+        <mat-card-header>
+          <mat-card-title><span class=""><span class="primary-color">WC Hostbill</span></span></mat-card-title>
+          <mat-card-subtitle>WooCommerce plugin</mat-card-subtitle>
+        </mat-card-header>
+        <mat-card-content>
+          Ability to enable WooCommerce into a hosting selling platform with billing function support.
+        </mat-card-content>
+        <mat-card-actions>
+          <button mat-button disabled>comming soon...</button>
+        </mat-card-actions>
+      </mat-card>
+    </div>
   </div>
 </div>
 <app-footer></app-footer>
