--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -1,10 +1,10 @@
-<mat-toolbar color="primary" style="position: fixed; display: flex; justify-content: center; box-shadow: 0 0 10px #333;">
+<mat-toolbar color="primary" style="position: fixed; display: flex; justify-content: center; z-index: 1000;">
   <div style="max-width: 1348px; width: 100%; display: flex;">
-    <span>softlibrary</span>
+    <span class="primary-light-color">softlibrary</span>
     <span style="flex: 1 1 auto;"></span>
-    <button mat-button>Projects</button>
-    <button mat-button>Blog</button>
-    <button mat-button>Forum</button>
-    <button mat-button>Github</button>
+    <button mat-button color="primary">Projects</button>
+    <button mat-button color="primary">Blog</button>
+    <button mat-button color="primary">Forum</button>
+    <a href="https://github.com/softlibrary" target="_blank" mat-button color="primary">Github</a>
   </div>
 </mat-toolbar>
