--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,11 +12,13 @@
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$softlibrary-primary: mat-palette($mat-indigo);
+$softlibrary-primary: mat-palette($mat-indigo, 900);
 $softlibrary-accent: mat-palette($mat-pink, A200, A100, A400);
 
 // The warn palette is optional (defaults to red).
 $softlibrary-warn: mat-palette($mat-red);
+
+$softlibrary-primary-light: mat-palette($mat-light-blue, A200);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
@@ -48,4 +50,18 @@ a:hover{
 
 .primary-color {
   color: mat-color($softlibrary-primary);
+}
+.primary-backgroundcolor {
+  background-color: mat-color($softlibrary-primary);
+}
+
+.primary-light-color {
+  color: mat-color($softlibrary-primary-light);
+}
+.primary-light-backgroundcolor {
+  background-color: mat-color($softlibrary-primary-light);
+}
+
+.warn-color {
+  color: mat-color($softlibrary-warn);
 }
