--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,5 +1,5 @@
 <div class="footer">
-  <div style="width: 1280px; padding: 50px 0;">
+  <div class="footer_container">
     <div style="padding-bottom: 10px;">
       <span nz-typography style="color: #888888;">
         Copyright &copy; 2021 <span style="color: #cccccc;">softlibrary</span>.
