--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,22 +1,24 @@
 <nz-layout style="display: flex; justify-content: center; align-items: center;">
   <nz-header style="width: 100%; max-width: 1280px; display: flex; align-items: center;">
     <span nz-typography style="color: #ffffff; margin-right: 50px;">softlibrary</span>
-    <a href="" nz-button nzType="default" nzGhost>Projects</a>
-    <a href="#" nz-button nzType="default" nz-dropdown [nzDropdownMenu]="community" nzTrigger="click" nzGhost>Community</a>
-    <nz-dropdown-menu #community="nzDropdownMenu">
-      <ul nz-menu>
-        <li nz-menu-item>
-          <a href="https://forum.softlibrary.org" target="_blank">Forum</a>
-        </li>
-        <li nz-menu-item>
-          <a href="https://github.com/softlibrary" target="_blank">Github</a>
-        </li>
-        <li nz-menu-item>
-          <a href="https://gitter.im/softlibrary" target="_blank">Gitter</a>
-        </li>
-      </ul>
-    </nz-dropdown-menu>
+    <span *ngIf="showMenu">
+      <a href="" nz-button nzType="default" nzGhost>Projects</a>
+      <a href="#" nz-button nzType="default" nz-dropdown [nzDropdownMenu]="community" nzTrigger="click" nzGhost>Community</a>
+      <nz-dropdown-menu #community="nzDropdownMenu">
+        <ul nz-menu>
+          <li nz-menu-item>
+            <a href="https://forum.softlibrary.org" target="_blank">Forum</a>
+          </li>
+          <li nz-menu-item>
+            <a href="https://github.com/softlibrary" target="_blank">Github</a>
+          </li>
+          <li nz-menu-item>
+            <a href="https://gitter.im/softlibrary" target="_blank">Gitter</a>
+          </li>
+        </ul>
+      </nz-dropdown-menu>
     <a href="https://blog.softlibrary.org" target="_blank" nz-button nzType="default" nzGhost>Blog</a>
+    </span>
     <span style="flex: 1 1 auto;"></span>
     <a href="#" nz-button nz-dropdown [nzDropdownMenu]="language" nzType="link" nzGhost nzTrigger="click">
       <i nz-icon nzType="flag"></i>
@@ -28,5 +30,34 @@
         </li>
       </ul>
     </nz-dropdown-menu>
+    <button nz-button nzType="primary" (click)="open()" *ngIf="showBtn" class="btnMenu"> 
+      <i nz-icon nzType="align-right" nzTheme="outline"></i>
+    </button>
+    <nz-drawer
+    [nzClosable]="false"
+    [nzVisible]="visible"
+    [nzPlacement]="placement"
+    nzTitle="softlibrary"
+    nzWrapClassName="drawer"
+    (nzOnClose)="close()" >
+    <ng-container *nzDrawerContent class="drawer_container"> 
+      <a href="" nz-button nzType="default" nzGhost class="menu_item" >Projects</a>
+      <a href="#" nz-button nzType="default" nz-dropdown [nzDropdownMenu]="community" nzTrigger="click" nzGhost class="menu_item">Community</a>
+      <nz-dropdown-menu #community="nzDropdownMenu">
+        <ul nz-menu>
+          <li nz-menu-item>
+            <a href="https://forum.softlibrary.org" target="_blank">Forum</a>
+          </li>
+          <li nz-menu-item>
+            <a  href="https://github.com/softlibrary" target="_blank">Github</a>
+          </li>
+          <li nz-menu-item>
+            <a  href="https://gitter.im/softlibrary" target="_blank">Gitter</a>
+          </li>
+        </ul>
+      </nz-dropdown-menu>
+    <a href="https://blog.softlibrary.org" class="menu_item" target="_blank" nz-button nzType="default" nzGhost>Blog</a>
+    </ng-container>
+  </nz-drawer>
   </nz-header>
 </nz-layout>
