--- a/src/app/layout/header/header.component.less
+++ b/src/app/layout/header/header.component.less
@@ -5,3 +5,20 @@ nz-layout {
     }
   }
 }
+
+
+.btnMenu{
+  border-color:#1890ff;
+  background: #1890ff;
+  margin-left: 15px;
+}
+
+
+
+   .menu_item{
+     display:block;
+     border:none;
+     text-align: left;
+     margin: 10px 0;
+   }
+ 
