--- a/src/app/layout/footer/footer.component.less
+++ b/src/app/layout/footer/footer.component.less
@@ -6,4 +6,21 @@
   align-items: center;
   width: 100%;
   background-color: @layout-header-background;
+  
+}
+
+.footer_container{
+  padding:50px 0;
+  display:flex;
+  flex-direction: column;
+  align-items: flex-start;
+  max-width: 1280px;
+  width: 100%;
+}
+
+// Responsive
+@media only screen and (max-width:1280px) {
+    .footer_container{
+      padding:50px 20px;
+    }
 }
