--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,5 +1,6 @@
 <nz-layout style="display: flex; justify-content: center; align-items: center;">
   <nz-header style="width: 100%; max-width: 1280px; display: flex; align-items: center;">
+    <span><img src="/assets/logo-blue-transparent.png" width="25" /></span>
     <span nz-typography style="color: #ffffff; margin-right: 50px;">softlibrary</span>
     <span *ngIf="showMenu">
       <a href="" nz-button nzType="default" nzGhost>Projects</a>
